...
object TestData {

    val marketAllResponse = """
        [
            {
                "market": "KRW-BTC",
                "korean_name": "비트코인",
                "english_name": "Bitcoin"
            },
            {
                "market": "KRW-ETH",
                "korean_name": "이더리움",
                "english_name": "Ethereum"
            },
            {
                "market": "BTC-ETH",
                "korean_name": "이더리움",
                "english_name": "Ethereum"
...
